--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^6.26.2",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.14.1"
